@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.1.0rc3
 
 	- Documentation updates.
+	- Fl_Shared_Image didn't delete images that were loaded.
 	- Enabled the OpenGL and threads demos when compiling
 	  for MingW.
 	- Fl_File_Input didn't update the directory buttons if a
